bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: Int.type does not take parameters
  if (90<=Int(n)<=110) {
             ^