bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (90<=Int(n)<=110) {
    return true
  } else {
    return false
  }
}